Oppdaterer til java 21 (#47)
* Oppdaterer til java 21

* Trenger en nyere gradle versjon for java 21

* Fjerner no-deamon da det virker som den skal plukke opp riktig versjon, ref forrige commit

* Prøver med no-daemon flagg i Gradle for å unngå versjonskonflikt i GA

* Fjerner gradle wrapper

* Infoflagg for mere verbose konsolloutput. Fjerner gradle cache.

* Bumper kotlin versjon

* Legger tilbake gradle cache

* Fjerner info flagg

* Fjerner no-daemon flagg

* Merge branch 'main' into java21

# Conflicts:
#	build.gradle.kts

* Fjerner gradle wrapper fra GA

* Bumper spring til å være kompatibel med java 21. Bumper mockk versjon pga bytebuddy...

* Bumper spring en minor versjon opp. Setter bytebuddy experimental jvm flagg til å være true.